tests/query_errors/pipeline_name_overlap/error.txt
Error: 
    8 |   select event + 1 from in into out;
    9 | end;
   10 | create pipeline add;
      | ^^^^^^^^^^^^^^^^^^^ Name `add` is already in use for another node, please use another name.
   11 | create script add;
   12 |